# ChangeLog for dev-dotnet/evolution-sharp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/evolution-sharp/ChangeLog,v 1.48 2009/10/24 13:13:08 nixnut Exp $

  24 Oct 2009; nixnut <nixnut@gentoo.org> evolution-sharp-0.21.1.ebuild:
  ppc stable #288324

  17 Oct 2009; Markus Meier <maekke@gentoo.org>
  evolution-sharp-0.21.1.ebuild:
  x86 stable

  11 Oct 2009; Peter Volkov <pva@gentoo.org> evolution-sharp-0.21.1.ebuild:
  amd64 stable, bug #288324

  02 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
  evolution-sharp-0.20.0.ebuild, evolution-sharp-0.21.1.ebuild,
  +files/evolution-sharp-0.21.1-gtk-sharp-dropped.patch:
  Fix bug 282042 completely. Shuffle the sample programs building under
  check_SCRIPTS, make the .dll use only glib-sharp.

*evolution-sharp-0.21.1 (22 Aug 2009)

  22 Aug 2009; Peter Alfredsen <loki_val@gentoo.org>
  evolution-sharp-0.20.0.ebuild, +evolution-sharp-0.21.1.ebuild:
  Bump. Add workaround for bug 282042. Gtk-sharp is not a runtime nor a
  buildtime dependency AFAICT, but is nonetheless required by configure.

  25 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  -evolution-sharp-0.17.4.ebuild:
  Remove old.

  04 Apr 2009; Markus Meier <maekke@gentoo.org>
  evolution-sharp-0.18.1.ebuild:
  amd64/x86 stable, bug #234305

  27 Mar 2009; Brent Baude <ranger@gentoo.org>
  evolution-sharp-0.18.1.ebuild:
  Marking evolution-sharp-0.18.1 ppc stable for bug 234305

*evolution-sharp-0.20.0 (25 Mar 2009)

  25 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  -files/evolution-sharp-0.19.2.1-newer-eds.patch,
  -evolution-sharp-0.19.2.1.ebuild, +evolution-sharp-0.20.0.ebuild:
  Bump

  22 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  evolution-sharp-0.18.1.ebuild:
  0.18.1 needs gtk-sharp-2.12.

  22 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  -files/evolution-sharp-0.18.0-respectlibdir.patch,
  +files/evolution-sharp-0.19.2.1-newer-eds.patch,