@@ -1,9 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX evolution-sharp-0.21.1-gtk-sharp-dropped.patch 3818 RMD160 0a7712b7119bbb0134d1047a828bc5067530da41 SHA1 a001e3cd143214c9339b3d273a4c067fa85e6ebb SHA256 93fa74cfd3a1f67b137af92a1d3d62758b6125218f819d5e824f75b3577e5a87
-DIST evolution-sharp-0.18.1.tar.bz2 317001 RMD160 88433a61f7098052fbba38634b5d2fbbca758d91 SHA1 259bfb2e6709f24db9e6fae23ee5da310b41e172 SHA256 bf0258f2d73a7bacafb94dde87b4806f4b6bf9d94a96d98fa1cea09026d215c4
 DIST evolution-sharp-0.20.0.tar.bz2 334986 RMD160 4c14347b30837476e416dd41f8b00a9cfa48f421 SHA1 61988839b4f3d58f9d2aff2dde3e96673fcc5aa5 SHA256 3a09c724e7c9c14d2a8ca18ad3d2686c8e80347adc8eaf0b72a598ab2980b111
 DIST evolution-sharp-0.21.1.tar.bz2 316152 RMD160 89e42f3b63ee7b4600ca5969f8327e745806869d SHA1 d2a8623812dce0476acd6bbc42e6d7d7d4f6bed4 SHA256 3cb78088e332f71b2a7958d2e8c6af3c9ff168731c8fb423aad7038cbdef3a1c
-EBUILD evolution-sharp-0.18.1.ebuild 698 RMD160 f43c2a07bfa3abf306e62a6ed051e0c5fd9109e6 SHA1 9a1ea18d79cadc450da5a7e502ac4eb1472f4033 SHA256 8d500fc5046deebe66fe9be86dfe910e002f1503186b2d31b7c9adf7e269317e
 EBUILD evolution-sharp-0.20.0.ebuild 1435 RMD160 13c67e79434d42070d993a877516330f2f6e9df9 SHA1 50b584e9adb7e4956db4f32776c312c5c18568c0 SHA256 d1527730eac3f499759303d201d6a1f1654c4349ae69665f2059d481eae3cd5d
 EBUILD evolution-sharp-0.21.1.ebuild 1516 RMD160 c5ad1afc998a48e59e5e2fe503f3c10c7ccef304 SHA1 3d61cb89c5f93cd08f1ece12f3eddb6dd62dd949 SHA256 d5e79f79eafc3aa7bde32305ea06d00e6ce8987a1d5a9414b9c651f0db8affb1
-MISC ChangeLog 8642 RMD160 f97070c86d5b13d9c02f1adc4a91f33a3b4f26c8 SHA1 2507c000d608b2036671557933b3d2a9483f2106 SHA256 594f200afd1dab448267b3033f803b3e18179fbe0bbc715c3c44a365a8fe8386
+MISC ChangeLog 8796 RMD160 f031a5db0b9240edab659fddf78c704d541c44d3 SHA1 1925365cbff98c632f84631d451bbbf57a3d90a2 SHA256 ad85f6a2cdc59d1eabce2780f46d0ab19beaf05ea2b6f15b48dbe06cb1f1beab
 MISC metadata.xml 160 RMD160 cc10b170ad63a746d8bdfbe5bf1bd9f7065922b8 SHA1 49eaf4246f7502850064d3806cce65d3a404ce1b SHA256 1bc3e313a948415fff0dfa63a5610943327146bfe16bfeca603379bf9706a687
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAkuGxMQACgkQCRZPokWLroSA2gCgysxdk/Qetmk3P6uk1Y7fV4qL
+TaYAnjTDBY3XckEFcoASaIdE5iZJ5XmG
+=a51y
+-----END PGP SIGNATURE-----
